--- a/2.0.Repositorios.md
+++ b/2.0.Repositorios.md
@@ -31,13 +31,14 @@ Y otros que en principio no tienen nada que ver... nos ocurre un poco como nos p
 
 En thingiverse no hay nadie que se encargue de organizar la información ni filtrar. 
 
+Vamos a ver ahora una colección de repositorios donde los diseños son en media de gran calidad, puestos que existen cuidadores que se encargan de validar la calidad de los diseños.
 
 
 ## [You Imagine](https://www.youmagine.com)
 
 Se trata de un sitio donde podemos encontrar no sólo diseños, sino proyectos muy interesantes donde la impresión 3D es fundamental
 
-![Proyectos de youimagine](./images/youimagine.png)
+![Proyectos de You Imagine](./images/youimagine.png)
 
 ## [Sketchfab](https://sketchfab.com/)
 
@@ -86,17 +87,16 @@ Se trata de un sitio comercial, donde se publicitan recursos, impresoras, diseñ
 
 Podemos encontrar diseños tan interesantes como [esta caja de seguridad con combinación](https://cults3d.com/es/modelo-3d/juegos/cryptex-af_inventions)
 
-![Cryptex](./images/criptex.webp)
+![Cryptex](./images/criptex.jpg)
 
 Hay que estar muy pendientes de los concursos que se publican, puesto que tienen muy buenos premios y además dan mucha promoción a los diseñadores.
 
-## [yeggi](http://www.yeggi.com/) 
+## [Yeggi](http://www.yeggi.com/) 
 
 Es un metabuscador que nos va a permitir buscar en varios repositorios al mismo tiempo, es decir, cuando buscamos nos proporciona enlaces a modelos en otros repositorios.
 
-Vamos a ver ahora una colección de repositorios donde los diseños son en media de gran calidad, puestos que existen cuidadores que se encargan de validara la calidad de los diseños.
 
-Por ejemplo si buscamos [Nasa Rocket](https://www.yeggi.com/q/nasa+rocket/) vamos a encontrar diseño de muy diferentes repositorios, algunos gratuitos, otros de pago....
+Por ejemplo si buscamos [Nasa Rocket](https://www.yeggi.com/q/nasa+rocket/) vamos a encontrar diseños de muy diferentes repositorios, algunos gratuitos, otros de pago....
 
 
 ## [GrabCad](https://grabcad.com/)
