--- a/2.1.Filamentos.md
+++ b/2.1.Filamentos.md
@@ -1,4 +1,4 @@
-## Filamento
+## Filamentos
 
 No nos cabe ninguna duda de que el filamento es parte esencial del resultado de toda  impresión:  la mejor impresora con un filamento de mala calidad no va a conseguir un resultado satisfactorio.
 
@@ -13,9 +13,9 @@ Primero se prepara una mezcla con los distintos materiales que formarán el fila
 ![Pellets](./images/dsc02548-medium.jpg)
 
 * Se le añaden diferentes aditivos, en una proporción mucho menor, para conseguir determinadas propiedades que se van buscando. 
-    * conseguir diferentes grados de dureza
-    * facilidad de impresión 
-    * rigidez o elasticidad
+    * Conseguir diferentes grados de dureza
+    * Facilidad de impresión 
+    * Rigidez o elasticidad
 * Se añade un colorante y/o otros aditivos para conseguir el acabado que vamos buscando:
     * Acabado en madera 
     * Acabado metalizado
@@ -41,11 +41,9 @@ Por el propio funcionamiento de la empresa a veces ocurre que encontramos que en
 
 Veamos las características más importantes
 
-* El **material**, por supuesto, que tiene sus propias características, y combiene que lo elijamos adecuamente, para cada proyecto. A la hora de imprimirlo nos va dar recomendar temperatura de fusión y una de adherencia a la base. La mayoría de las impresoras pueden trabajar con distintos materiales.
+* El **material**, por supuesto, tiene sus propias características, y conviene que lo elijamos adecuadamente, para cada proyecto. A la hora de imprimirlo nos va dar recomendar temperatura de fusión y una de adherencia a la base. La mayoría de las impresoras pueden trabajar con distintos materiales.
 
-* El **grosor**,  que puede ser 2.85/3mm o de 1.75mm. El extrusor y por tanto la impresora está diseñado para trabajar con un determinado grosor y no debemo usar otro salvo que adaptemos o cambiemos el extrusor.
-
-
+* El **grosor**,  que puede ser 2.85/3mm o de 1.75mm. El extrusor y por tanto la impresora está diseñado para trabajar con un determinado grosor y no debemos usar otro salvo que adaptemos o cambiemos el extrusor.
 
 ## Calidad del filamento
 
@@ -67,7 +65,7 @@ Una prueba rápida sobre el filamento es intentar doblarlo. Todos los filamentos
 
 ## Problemas provocados por el filamento
 
-En primer lugar, si no lo configuramos adecuamente el filamento vamos a perder tiempo y dinero en impresiones de mala calidad.
+En primer lugar, si no lo configuramos adecuadamente el filamento vamos a perder tiempo y dinero en impresiones de mala calidad.
 
 Si utilizamos indebidamente un filamento o sin tener en cuenta sus características, podemos dar lugar a **atascos** que nos van a obligar a limpiar los diferentes componentes. Este tema es tan importante que le vamos a dedicar un apartado completo.
 
@@ -81,13 +79,12 @@ Si utilizamos indebidamente un filamento o sin tener en cuenta sus característi
 
 Cada vez existen más materiales susceptibles de poder usarse en las impresoras.
 
-Vamos a repasar sus características y sus algunos de sus usos.
+Vamos a repasar sus características y algunos de sus usos.
 
 * PLA: es un derivado del ácido láctico, más ecológico y el más utilizado hoy en día. Es fácil de imprimir, tiene muy buenas características de dureza. Un punto débil es que  comienza a ablandarse a unos 60-70º con lo que no es adecuado para piezas de exterior.
-* ABS: es el plástico del que están hechas las piezas de casi todo lo que nos rodea. Es complicado de imprimir en piezas grandes, puesto que se despega con facilidad y produce malos olores al imprimirse. Tiene una muy buena resistencia y permite que hagamos mecanizados sobre las piezas impresas, como pueden taladros, sin que se deteriore la estructura de capas.
+* ABS: es el plástico del que están hechas las piezas de casi todo lo que nos rodea. Es complicado de imprimir en piezas grandes, puesto que se despega con facilidad y produce malos olores al imprimirse. Tiene una muy buena resistencia y permite que hagamos mecanizados sobre las piezas impresas, como pueden taladros, sin que se deteriore la estructura de las capas.
 * PETG: Es un filamento muy ecológico, y una excelente elección para trabajar objetos grandes. Es muy resistente y además tiene una gran ventaja y se le considera seguro para contacto con alimentos.
 * HIPS: Una de las características más utilizadas de este filamento es que se deshace fácilmente con determinados líquidos como el Limoneno, de manera que si disponemos de una impresora que permite imprimir con 2 filamentos al mismo tiempo podemos hacer que el material de soporte que tendremos que retirar se imprima en HIPS y la pieza propiamente en PLA o ABS. Al terminar, sumergimos la pieza completa en el líquido y todo el soporte desaparece.
-
 ![Soporte de HIPS que se disuelve fácilmente](./images/HIPS-cover-768x452.jpg)
 
 * Nylon: es un material muy duro y a la vez elástico, no es que podamos doblarlo sino que si lo sometemos a golpes, su elasticidad lo va a proteger ante roturas.
@@ -101,11 +98,11 @@ Estos filamentos que hemos visto casi nunca vienen de una forma pura, sino que l
 
 ## Composites
 
-Son materiales con una base plástica pero en al que se añaden partículas u otro componente que le da alguna característica deseada, como puede ser distinto aspecto/acabado, textura metálica, olores, ...
+Son materiales con una base plástica pero al que se añaden partículas u otro componente que le da alguna característica deseada, como puede ser distinto aspecto/acabado, textura metálica, olores, ...
 
 Su precio suele ser bastante más elevado que el de los filamentos "normales".
 
-* Filamento con acabado de madera: como vemos tiene un aspecto totalmente natural, suelen tener partículas de serrín que le dan ese aspecto y le podemos conseguirlo en varios tipos de madera. Algunos de ellos dependiendo de la temperatura de impresión toman diferentes colores, con lo que se pueden conseguir acabados con veteados similares a la madera.
+* Filamento con acabado de madera: como vemos tiene un aspecto totalmente natural, suelen tener partículas de serrín que le dan ese aspecto y podemos conseguirlo en varios tipos de madera. Algunos de ellos, dependiendo de la temperatura de impresión toman diferentes tonos de marrón, con lo que se pueden conseguir acabados con veteados similares a la madera.
 
 ![madera](./images/filamentoMadera.jpg)
 
@@ -117,23 +114,24 @@ Su precio suele ser bastante más elevado que el de los filamentos "normales".
 
 Siempre que utilizamos un filamento tenemos que tener claros los parámetros para conseguir una buena calidad de impresión.
 
-Como hemos visto el proceso de impresión consiste en fundir el filamento, depositarlo y enfriarlo para que se solidifique. Podemos regular estas 3 fases controlando los siguietnes parámetros:
+Como hemos visto el proceso de impresión consiste en fundir el filamento, depositarlo y enfriarlo para que se solidifique. Podemos regular estas 3 fases controlando los siguientes parámetros:
 
-* **Temperatura extrusor**: temperatura al que se funde el material. No hay un número exacto y ajustándola adecuadamente podemos conseguir diferentes acabados:
-    * Una temperatura más elevada va a producir un acabado más fluído, donde las capas están más fundidas entre si. El acabado será más "liso"
-    * Una tempera más baja va a conseguir una mayor precisión en la impresión, con el acabado de las capas más preciso.
-Veamos algunas de las temperaturas típicas:
-        * ABS: 240º
-        * PLA: 190º
-        * Nylon: 260º
-        * Filaflex: 220º
+* **Temperatura del extrusor**: temperatura al que se funde el material. No hay un número exacto y ajustándola adecuadamente podemos conseguir diferentes acabados:
+    * Una temperatura más elevada va a producir un acabado más fluido, donde las capas están más fundidas entre sí. El acabado será más "liso"
+    * Una temperatura más baja va a conseguir una mayor precisión en la impresión, con el acabado de las capas más preciso.
+
+    Veamos algunas de las temperaturas típicas:
+    * ABS: 240º
+    * PLA: 190º
+    * Nylon: 260º
+    * Filaflex: 220º
 * **Temperatura de la base**/cama caliente: nos va a permitir conseguir una mejor adhesión de la pieza a la base. Si tenemos mala adhesión, la pieza se moverá y el resultado será malo.
 * **Velocidad de impresión**: tenemos que ajustar la velocidad de impresión al material. Para materiales flexibles tenemos que usar una velocidad más baja. De los contrario, debido a la elasticidad del filamento, el resultado será bastante malo, dando lugar a atascos.
-* **Ventilador de Capa**: el extrusor tiene un ventilador para enfriar el filamento que sale fundido. Al enfriarlo rápidamente conseguimos que se endurezca inmediamente. A veces nos interesa que se solidifique al salir (por ejemplo cuando estamos haciendo un parte horizontal que cuelga) y otras queremos lo contrario puesto que si no se enfría se pegará más facilmente a la otra capa.
+* **Ventilador de Capa**: el extrusor tiene un ventilador para enfriar el filamento que sale fundido. Al enfriarlo rápidamente conseguimos que se endurezca inmediatamente. A veces nos interesa que se solidifique al salir (por ejemplo cuando estamos haciendo un parte horizontal que cuelga) y otras queremos lo contrario puesto que si no se enfría se pegará más fácilmente a la otra capa.
 
 ## Ejemplos de materiales
 
-Podemos hablar en general de un material, pero lo realemente importante es conocer los parámetros que nos dan el fabricante. De hecho podemos ver como un mismo fabricante vende varios materiales, en principio de un mismo tipo, como PLA, pero con diferentes características y acabado.
+Podemos hablar en general de un material, pero lo realmente importante es conocer los parámetros que nos dan el fabricante. De hecho podemos ver cómo un mismo fabricante vende varios materiales, en principio de un mismo tipo, como PLA, pero con diferentes características y acabado.
 
 Vamos a ver algunos de ellos, enlazados a su fabricante:
 
@@ -143,7 +141,7 @@ Vamos a ver algunos de ellos, enlazados a su fabricante:
 * Temperatura de la cama: (50-70 opcional)
 * Velocidad del ventilador: 100
 * Altura de capa: 0,1-0,3 mm
-* Espesor de pared: 0,8mm
+* Espesor de pared: 0,8 mm
 * Velocidad de impresión: Hasta 90 mm/s
 
 #### [PLA 850](https://sakata3d.com/es/pla-850/31-pla-850-azul.html)
@@ -152,7 +150,7 @@ facilidad de moldeado, impresión y grabado, alta rigidez y baja contracción
 
 * Temperatura de impresión : 190º-220º
 * Temperatura cama caliente : no necesaria
-* Velocidad de impresión soportadas : hasta 200mm/s
+* Velocidad de impresión soportadas : hasta 200 mm/s
 
 
 #### [PLA 870](https://sakata3d.com/es/hr-pla-870/59-pla-ingeo-3d870-blanco-super-premium-alto-impacto.html)
@@ -173,7 +171,7 @@ facilidad de moldeado, impresión y grabado, alta rigidez y baja contracción
 
 * Temperatura de impresión : 225-245ºC
 * Temperatura cama caliente : 60ºC   
-* Velocidad de impresión soportadas : hasta 200mm/s
+* Velocidad de impresión soportadas : hasta 200 mm/s
 
 
 #### [HIPS](https://sakata3d.com/es/hips/147-hips-blanco-natural.html)
@@ -187,18 +185,18 @@ El filamento HIPS es un termoplástico con cualidades similares al ABS pero con 
 
 #### [PLA Flexible X-920](https://sakata3d.com/es/flexibles/182-x-920.html)
 
- flexible, biodegradable y compostable. Su gran capacidad de absorción a los impactos lo hace ideal para todo aquel proyecto que necesite ser resistente. Fácil de imprimir y con un alta tolerancia a la temperatura. Su textura se parece a la goma de caucho natural
+ flexible, biodegradable y compostable. Su gran capacidad de absorción a los impactos lo hace ideal para todo aquel proyecto que necesite ser resistente. Fácil de imprimir y con una alta tolerancia a la temperatura. Su textura se parece a la goma de caucho natural
 
 * Temperatura de impresión: 220-235 ºC
 * Temperatura cama: 50 ºC
 
 ## Precios
 
-El precio del filamento varia bastante dependiendo del tipo de material, pero podemos encontrar filamento "normal" (PLA o ABS) de buena calidad en torno a los 20€/Kg. Para otros filamentos con características más especiales, como son los acabados metálicos o los filamentos flexibles suelen bastante más caros.
+El precio del filamento varía bastante dependiendo del tipo de material, pero podemos encontrar filamento "normal" (PLA o ABS) de buena calidad en torno a los 20€/Kg. Para otros filamentos con características más especiales, como son los acabados metálicos o los filamentos flexibles suelen ser bastante más caros.
 
 La mayoría de las empresas suelen tener oferta de filamentos en los que la calidad del material es exactamente la misma, pero hay diferencias entre el color del principio de la bobina y el final. En muchas
 
-Existen multitud de empresas que venden filamento unas con mayor o con menor calidad,  a veces la encontramos a unos precios y a veces a otro. En cualquier caso tenemos de pensar  que una empresa difícilmente va a perder dinero vendiendo un filamento a un precio muy bajo. Cuando encontramos una oferta de filamento a un precio extremadamente bajo con gran probabilidad estamos ante una empresa  qué quiere eliminar un determinado lote de filamento las razones se nos escapan:
+Existen multitud de empresas que venden filamento unas con mayor o con menor calidad,  a veces la encontramos a unos precios y a veces a otro. En cualquier caso, tenemos que pensar  que una empresa difícilmente va a perder dinero vendiendo un filamento a un precio muy bajo. Cuando encontramos una oferta de filamento a un precio extremadamente bajo con gran probabilidad estamos ante una empresa  que quiere eliminar un determinado lote de filamento las razones se nos escapan:
 
 *  Puede ser que simplemente quiera eliminar un stock que en ese momento no le interesa almacenar
 *  En otras ocasiones puede ser simplemente una oferta puntual que pretende ganar mercado o popularidad
@@ -207,9 +205,9 @@ Existen multitud de empresas que venden filamento unas con mayor o con menor cal
 
 ## Cuidados del filamento
 
-La húmedad es una de las causas más frecuentes de deterioro de los filamentos. Pôr eso, cuando no los vayamos a usar debemos guardar los filamentos en bolsas para evitar que cojan humedad, lo que los haría más frágiles y más difíciles de imprimir.
+La humedad es una de las causas más frecuentes de deterioro de los filamentos. Por eso, cuando no los vayamos a usar debemos guardar los filamentos en bolsas para evitar que cojan humedad, lo que los haría más frágiles y más difíciles de imprimir.
 
-Muchas fabricante incluyen una bolsa con cierre tipo Zip para guardar los filamentos con más garantías.
+Muchos fabricantes incluyen una bolsa con cierre tipo Zip para guardar los filamentos con más garantías.
 
 Esto no quiere decir que cada noche tengamos que guardar el filamento que no estemos usando, pero sí cuando no lo vayamos a usar durante unos días.
 
