--- a/6.1.Cura_avanzado.md
+++ b/6.1.Cura_avanzado.md
@@ -1,3 +1,5 @@
+## Más detalles
+
 [Megatutorial Cura](https://of3lia.com/ultimaker-cura/)
 
 [Tutorial sobre Cura de los expertos de bitfab.io](https://bitfab.io/es/blog/tutorial-laminado-cura/)
